# deep-mash

./: .gitignore  README.md  dataloader.py  deep_mash.ipynb  main.py  pyproject.toml  test.ipynb  tree.txt
config/: default.yaml  query_default.yaml
src/deep_mash/: __init__.py
src/deep_mash/model/: __init__.py  base.py  train.py
src/deep_mash/preprocess/: __init__.py  gtzanstems_dataset.py  preprocess.py  utils.py
src/deepmash/: __init__.py  deepmash.ipynb  demo.ipynb  utils.py
src/deepmash/data_processing/: __init__.py  common.py  constants.py  gtzan_stems.py  musdb18.py  preprocess.py  preprocessing.py
src/deepmash/logs/CocolaCNN/version_0/: hparams.yaml  metrics.csv
src/deepmash/logs/baseline/version_0/: hparams.yaml  metrics.csv
src/deepmash/logs/demo/version_0/: metrics.csv
src/deepmash/logs/log-test/version_1/: hparams.yaml  metrics.csv
src/deepmash/models/: __init__.py  cnn.py  cocola_cnn.py  save_embeddings.py  train.py
src/deepmash/retrieval/: __init__.py  query.py
src/deepmash/scripts/: deepmash.ipynb  demo.ipynb  sync_test.ipynb
src/deepmash/sync/: __init__.py  sync.py
src/deepmash/utils/: plotting_utils.py  utils.py
