[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deep-mash"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "stempeg>=0.2.4",
    "tqdm>=4.67.1",
    "torchvision>=0.15.2",
    "omegaconf",
    "torchcodec==0.3.0"
]

# src layout (https://packaging.python.org/en/latest/discussions/src-layout-vs-flat-layout/)
[tool.hatch.build.targets.wheel]
packages = ["src/deepmash"]
